--- a/teknik-planering.html
+++ b/teknik-planering.html
@@ -71,7 +71,7 @@
     <p>Under två lektioner hålls en workshop där du skapar en webbsida med hjälp av AI-verktyg. Här är instruktionerna till workshopen.</p>
     
     <h3 style="cursor: pointer" onclick="location.href='konstruktionsarbete-instruktioner.pdf';">Konstruktionsarbete - Instruktion →</h3>
-    <p>Under c:a fyra lektioner genomförs ett konstruktionsarbete av en pendelklocka utifrån ett antal krav. Här är instruktionerna till arbetet.</p>
+    <p>Under c:a fyra lektioner genomförs ett konstruktionsarbete av en pendelklocka utifrån ett antal krav. Instruktionerna delas ut i pappersform, men finns också här som pdf.</p>
     
     <h3 style="cursor: pointer" onclick="location.href='konstruktionsarbete-rapportmall.docx';" download="konstruktionsarbete-rapportmall.docx">Konstruktionsarbete - Rapportmall →</h3>
     <p>Fyll i rapportmallen under arbetets gång och skicka till <a href="mailto:peterskeppstedt@gmail.com">peterskeppstedt@gmail.com</a> när du är färdig. Rapporten ligger till grund för bedömningen av konstruktionsarbetet.</p>
