Removed teknik file.

--- a/teknik-planering.html
+++ b/teknik-planering.html
@@ -13,7 +13,7 @@
 </div>
 	<div class="flex-container">
 		<div style="text-align: left"><h1>Teknik - Planering</h1></div>
-		<div><h1 style="text-align: right; cursor: pointer" onclick="location.href='teknik';">Till startsidan >></h1></div>
+		<div><h1 style="text-align: right; cursor: pointer" onclick="location.href='https://skolwebben.github.io/';">Till startsidan >></h1></div>
 	</div>
     
     <h2>Vecka 12</h2>
