--- a/ai-workshop.html
+++ b/ai-workshop.html
@@ -22,7 +22,7 @@
     
     <h3 style="cursor: pointer" onclick="location.href='https://arbetsformedlingen.se/for-arbetssokande/yrken-och-framtid/hitta-yrken/yrkesgrupper/1389';">Webbdesign →</h3><p>Webbdesignern designar och bygger upp webbplatser. Med fokus på funktionalitet och användarvänlighet skapar webbdesignern en struktur för webbplatsen och väljer bland annat typsnitt, färgskalor och symboler.<br><br>Webbdesigner är ett yrke som kommer förändras i takt med att AI-verktygen fortsätter utvecklas.</p>
     
-    <h3>Inspiration (frivillig fördjupning)</h3><p>Jag har skapat två enkla spel med hjälp av AI på några minuter. Du kan öppna dem och visa sidkälla (se instruktionerna till workshopen). Kopiera koden och utgå från workshopens instruktioner för att försöka förstå eller ändra i koden (AI-verktyget har till och med kommenterat snake-koden, bra va?).<br><br><a href="https://veckodisc.github.io/ai-snake">Snake (100 rader kod)  →</a><br><a href="https://veckodisc.github.io/ai-fem-i-rad">Fem i rad (100 rader kod)  →</a>
+    <h3>Inspiration (frivillig fördjupning)</h3><p>Jag har skapat två enkla spel med hjälp av AI på några minuter. Du kan öppna dem och visa sidkälla (se instruktionerna till workshopen). Kopiera koden och utgå från workshopens instruktioner för att försöka förstå eller ändra i koden (AI-verktyget har till och med kommenterat snake-koden, bra va?).<br><br><a href="ai-snake">Snake (100 rader kod)  →</a><br><a href="ai-fem-i-rad">Fem i rad (100 rader kod)  →</a>
 </div> 
 </body>
 </html>
