--- a/ai-konsekvenser.html
+++ b/ai-konsekvenser.html
@@ -54,6 +54,8 @@
     <a href="https://www.svtplay.se/video/ewAdvGV/tank-om/tank-om-vi-skapar-nagot-smartare-an-vi-manniskor">Tänk om (SVT Play, 5 min)   →</a><br>
     <a href="https://www.svtplay.se/video/jNnWaXy/anders-hansen-moter-1/stuart-russell">Ledande AI-forskare om utvecklingen (SVT Play, 26 min)  →</a><br>
     <a href="https://www.svtplay.se/video/ebY4NEL/din-hjarna/hjarnan-i-framtiden">Hjärnan i framtiden (SVT Play, 59 min)  →</a><br><br>
+    <b>Test</b><br>
+    <a href="https://www.svt.se/special/quiz-vilka-bilder-ar-ai-vilka-ar-akta/">Gissa om bilden är äkta eller AI-genererad, SVT  →</a><br><br>
     <b>Texter</b><br>
     <a href="https://www.forskning.se/innehallsetikett/artificiell-intelligens/">Artiklar om AI från forskning.se  →</a><br>
     <a href="https://www.gu.se/experter-artificiell-intelligens-ai">Forskningsområden om AI vid Göteborgs universitet  →</a><br>
