Fler AI- filmer.

--- a/ai-konsekvenser.html
+++ b/ai-konsekvenser.html
@@ -48,8 +48,11 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/_ogAX4bZ3QQ?si=vNeHMZh6CP--NTca" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 	
 	<br><br>
-    <h3>Inspiration (frivillig fördjupning)</h3>
+    <h3>Inspiration</h3>
     <p><b>Filmer</b><br>
+    <a href="https://www.svtplay.se/generation-ai">Generation AI, sex filmer om konsekvenser av AI (SVT Play, 2 tim)  →</a><br>
+    
+    <a href="https://www.svtplay.se/video/KzVdDvk/bakom-ai">Bakom AI: Vetenskapens värld (SVT Play, 1 tim)  →</a><br>
     <a href="https://www.svt.se/kultur/nya-verktyget-sora-skapar-ai-genererade-videor">Videoverktyget Sora från OpenAI (SVT, 1 min)  →</a><br>
     <a href="https://www.svtplay.se/video/ewAdvGV/tank-om/tank-om-vi-skapar-nagot-smartare-an-vi-manniskor">Tänk om (SVT Play, 5 min)   →</a><br>
     <a href="https://www.svtplay.se/video/jNnWaXy/anders-hansen-moter-1/stuart-russell">Ledande AI-forskare om utvecklingen (SVT Play, 26 min)  →</a><br>
