--- a/teknik-planering.html
+++ b/teknik-planering.html
@@ -50,7 +50,7 @@
     <h2>Vecka 16</h2>
     
     <h3 style="cursor: pointer" onclick="location.href='konstruktionsarbete';">Lektion 9: Konstruktionsarbete - Skisser och rapport →</h3>
-    <p>Vi arbetar med att färdigställa konstruktionsarbetets skisser och rapport. För de som har misat lektioner finns det möjlighet att a igen missade moment.</p>
+    <p>Vi arbetar med att färdigställa konstruktionsarbetets skisser och rapport. För de som har missat lektioner finns det möjlighet att ta igen missade moment.</p>
     
     <h3 style="cursor: pointer" onclick="location.href='konstruktionsarbete';">Lektion 10: Konstruktionsarbete - Pendelklocka →</h3>
     <p>Arbetet med pendelklockan fortsätter.</p>
