Changes in construction-assignmnet

--- a/konstruktionsarbete.html
+++ b/konstruktionsarbete.html
@@ -13,14 +13,14 @@
 		<div><h1 style="text-align: right; cursor: pointer" onclick="location.href='teknik-planering'">Till planeringen >></h1></div>
 	</div>
 	
-    <p>Företaget <i>Lärande Leksaker</i> som tillverkar pedagogiska leksaker har gett er i uppdrag att konstruera en <b>prototyp av en pendelklocka för barn 5–8 år</b>. Er uppgift är att konstruera prototypen utifrån företagets krav och dokumentera arbetet i en rapport.
+    <p>Ditt företag <i>Lärande Leksaker</i> som tillverkar pedagogiska leksaker har fått i uppdrag av IKEA och LEGO att konstruera en <b>prototyp av en pendelleksak för barn 5–9 år</b>. Din uppgift är att konstruera prototypen utifrån företagets krav och dokumentera arbetet i en rapport.
     <br><br><b>Lärandemål:</b>
     <br>&nbsp;&nbsp;•  <i>Ni kan tillämpa några principer för att skapa hållfasta och stabila konstruktioner.</i> <br>&nbsp;&nbsp;•  <i>Ni kan pröva och ompröva idéer som leder framåt i ett tekniskt konstruktionsarbete utifrån ett antal krav.</i><br>&nbsp;&nbsp;•  <i>Ni kan dokumentera tekniskt konstruktionsarbete så att arbetsprocessen och lösningen är tydligt redovisad.</i></p>
     
-    <h3 style="cursor: pointer" onclick="location.href='konstruktionsarbete-instruktioner.pdf';">Konstruktionsarbete - Instruktion →</h3>
+    <h3 style="cursor: pointer" onclick="location.href='konstruktion-instruktioner.pdf';">Konstruktionsarbete - Instruktion →</h3>
     <p>Instruktionerna delas ut i pappersform, men finns också här som pdf.</p>
-    <h3 style="cursor: pointer" onclick="location.href='konstruktionsarbete-rapportmall.docx';" download="konstruktionsarbete-rapportmall.docx">Konstruktionsarbete - Rapportmall →</h3>
-    <p>Fyll i rapportmallen under arbetets gång och skicka till <a href="mailto:peterskeppstedt@gmail.com">peterskeppstedt@gmail.com</a> när du är färdig. Rapporten ligger till grund för bedömningen av konstruktionsarbetet.</p>
+    <h3 style="cursor: pointer" onclick="location.href='konstruktion-rapport.pdf';">Konstruktionsarbete - Rapport →</h3>
+    <p>Rapporten ligger till grund för bedömningen av konstruktionsarbetet.</p>
     <h3 style="cursor: pointer" onclick="location.href='https://arbetsformedlingen.se/for-arbetssokande/yrken-och-framtid/hitta-yrken/yrkesgrupper/1333';">Industridesign →</h3><p>Industridesign (eller produktdesign) handlar om att formge industriellt massproducerade föremål som tillverkas på ett kostnadseffektivt sätt och samtidigt uppfyller andra krav på exempelvis estetik, funktion, miljöpåverkan, säkerhet och användarvänlighet. Industridesign är en kreativ och uppfinningsrik process där faktorer som teknik, material, miljö, säkerhet, ekonomi, marknadsföring och estetik förs samman och resulterar i maskinproducerbara varor.<br><br>Industridesignern ingår i en produktutvecklingsgrupp och arbetar i nära samarbete med konstruktörer och marknadsförare. Industridesignern tar fram skisser, ritningar och modeller som underlag till serie- eller masstillverkade produkter. Ofta tillverkas en prototyp för att kunna studera den framtida produkten “i full skala”.</p>
     <h3>Övergripande betygskriterier för konstruktionsarbetet</h3>
     <p><b>Betygskriterier för E</b><br> 
