--- a/vittra.html
+++ b/vittra.html
@@ -51,6 +51,9 @@
     <h3 style="cursor: pointer" onclick="location.href='bi-kap5-np-uppgifter-facit.pdf';">Biologi Direkt kapitel 5: Facit NP-uppgifter →</h3>
     <p>Facit till NP-uppgifterna som berör kapitel 5 i Biologi Direkt.</p>
     
+    <h3 style="cursor: pointer" onclick="location.href='bi-kap5-fordjupning.pdf';">Biologi Direkt kapitel 5: Fördjupningsuppgift →</h3>
+    <p>Fördjupa dig i nyhets- eller forskningsartiklar om genetik och bioteknik. Deadline: 30 maj.</p>
+    
     <p><b>Korta filmer (3 min) om <i>Cellen, genetik och bioteknik</i></b><br>
     <a href="https://urplay.se/program/213570-snabbkoll-gmo">GMO  →</a><br>
     <a href="https://urplay.se/program/213580-snabbkoll-mutation">Mutation  →</a><br>
