A lot of new stuff.

--- a/ai-intro-8.html
+++ b/ai-intro-8.html
@@ -10,7 +10,7 @@
 <div class="container">
 	<div class="flex-container">
 		<div style="text-align: left"><h1>AI - Introduktion</h1></div>
-		<div><h1 style="text-align: right; cursor: pointer" onclick="location.href='teknik-7-planering'">Till planeringen >></h1></div>
+		<div><h1 style="text-align: right; cursor: pointer" onclick="location.href='vittra'">Till planeringen >></h1></div>
 	</div>
     <h3>Artificiell intelligens</h3>
     <p>En dator eller maskin som uppvisar intelligens eller mänskliga förmågor. Ett intelligent system kan dra slutsatser, lösa problem, planera och vara självlärande. Det mesta som i dagligt tal kallas AI uppfyller dock inte alla kriterier. AI handlar idag om enstaka, ganska snäva förmågor, som bildigenkänning och diagnosställande.</p>
