--- a/np/fysik.html
+++ b/np/fysik.html
@@ -120,7 +120,7 @@
 
 
            <!-- 2. Elektricitet & Magnetism -->
-           <a href="#" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
+           <a href="el" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
                <div class="image-box w-16 h-16 rounded-xl shrink-0">
                    <img src="https://images.unsplash.com/photo-1517077304055-6e89abbf09b0?auto=format&fit=crop&w=150&q=80" alt="Kretskort" class="w-full h-full object-cover transition-transform duration-500">
                </div>
