Forces and magnetism.

--- a/np/fysik.html
+++ b/np/fysik.html
@@ -132,7 +132,7 @@
 
 
            <!-- 3. Krafter & Rörelse (NEW: Working Rollercoaster) -->
-           <a href="#" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
+           <a href="kraft" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
                <div class="image-box w-16 h-16 rounded-xl shrink-0">
                    <img src="https://commons.wikimedia.org/wiki/Special:FilePath/Roller_Coaster_Loop_(23795885949).jpg?width=300" alt="Berg-och-dalbana loop" class="w-full h-full object-cover transition-transform duration-500">
                </div>
