--- a/np/fysik.html
+++ b/np/fysik.html
@@ -144,7 +144,7 @@
 
 
            <!-- 4. Ljud & Ljus (NEW: Working Prism Refraction) -->
-           <a href="#" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
+           <a href="ljud" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
                <div class="image-box w-16 h-16 rounded-xl shrink-0">
                    <img src="https://commons.wikimedia.org/wiki/Special:FilePath/Prism_Refraction.jpg?width=300" alt="Prisma ljusspektrum" class="w-full h-full object-cover transition-transform duration-500">
                </div>
