--- a/np/fysik.html
+++ b/np/fysik.html
@@ -156,7 +156,7 @@
 
 
            <!-- 5. Materia & Värmelära (NEW: Working Boiling Water) -->
-           <a href="#" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
+           <a href="materia" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
                <div class="image-box w-16 h-16 rounded-xl shrink-0">
                    <img src="https://commons.wikimedia.org/wiki/Special:FilePath/Boiling_water.jpg?width=300" alt="Kokande vatten" class="w-full h-full object-cover transition-transform duration-500">
                </div>
