Atomfysik och källkritik.

--- a/np/fysik.html
+++ b/np/fysik.html
@@ -179,7 +179,7 @@
 
 
            <!-- 7. Atomfysik & Strålning (NEW: Working Nuclear Plant) -->
-           <a href="#" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
+           <a href="atomfysik" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
                <div class="image-box w-16 h-16 rounded-xl shrink-0">
                    <img src="https://commons.wikimedia.org/wiki/Special:FilePath/Nuclear_Power_Plant_Cattenom.jpg?width=300" alt="Kärnkraftverk" class="w-full h-full object-cover transition-transform duration-500">
                </div>
@@ -191,7 +191,7 @@
 
 
            <!-- 8. Fysiken i samhället -->
-           <a href="#" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
+           <a href="kallkritik" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
                <div class="image-box w-16 h-16 rounded-xl shrink-0">
                    <img src="https://images.unsplash.com/photo-1473341304170-971dccb5ac1e?auto=format&fit=crop&w=150&q=80" alt="Kraftledningar" class="w-full h-full object-cover transition-transform duration-500">
                </div>
