--- a/np/fysik.html
+++ b/np/fysik.html
@@ -203,7 +203,7 @@
 
 
             <!-- 9. Systematiska undersökningar -->
-            <a href="#" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden bg-violet-900/20 border-violet-500/30">
+            <a href="undersokningar" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden bg-violet-900/20 border-violet-500/30">
                <div class="image-box w-16 h-16 rounded-xl shrink-0 border-violet-500/50">
                    <img src="https://images.unsplash.com/photo-1532187863486-abf9dbad1b69?auto=format&fit=crop&w=150&q=80" alt="Laborationsglas med vätska" class="w-full h-full object-cover transition-transform duration-500">
                </div>
