Added Biology and ecology.

--- a/np/no.html
+++ b/np/no.html
@@ -166,7 +166,7 @@
                        <p class="text-slate-400 mb-8 text-sm leading-relaxed">
                            Fördjupa dig i cellen, genetik, ekosystemtjänster och evolutionens mekanismer.
                        </p>
-                       <a href="#biologi" class="btn-glow block w-full bg-green-600 hover:bg-green-500 text-white text-center font-bold py-3.5 rounded-xl transition-all shadow-lg shadow-green-900/20">
+                       <a href="biologi" class="btn-glow block w-full bg-green-600 hover:bg-green-500 text-white text-center font-bold py-3.5 rounded-xl transition-all shadow-lg shadow-green-900/20">
                            Öppna Biologi
                        </a>
                    </div>
