--- a/np/el.html
+++ b/np/el.html
@@ -179,27 +179,7 @@
            </a>
 
 
-           <!-- 5. PDF: Svårare frågor 1 -->
-           <a href="el1.pdf" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
-               <div class="icon-box w-14 h-14 bg-indigo-500/20 text-indigo-400 border border-indigo-500/30 shrink-0">
-                   <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
-                   </svg>
-               </div>
-               <div class="flex-1 min-w-0">
-                   <div class="flex items-center gap-2 mb-1">
-                       <span class="tag bg-indigo-500/20 text-indigo-300 border border-indigo-500/30">PDF</span>
-                   </div>
-                   <h3 class="text-lg font-bold text-white group-hover:text-indigo-300 transition-colors">Svårare frågor 1</h3>
-                   <p class="text-xs text-slate-400">Fördjupning C-A nivå</p>
-               </div>
-               <div class="absolute right-4 opacity-0 group-hover:opacity-100 transition-all duration-300 transform translate-y-2 group-hover:translate-y-0">
-                   <svg class="w-5 h-5 text-slate-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path></svg>
-               </div>
-           </a>
-
-
-            <!-- 6. PDF: Svårare frågor 2 -->
+            <!-- 6. PDF: Svårare frågor -->
             <a href="el2.pdf" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
                <div class="icon-box w-14 h-14 bg-indigo-500/20 text-indigo-400 border border-indigo-500/30 shrink-0">
                    <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -210,7 +190,7 @@
                    <div class="flex items-center gap-2 mb-1">
                        <span class="tag bg-indigo-500/20 text-indigo-300 border border-indigo-500/30">PDF</span>
                    </div>
-                   <h3 class="text-lg font-bold text-white group-hover:text-indigo-300 transition-colors">Svårare frågor 2</h3>
+                   <h3 class="text-lg font-bold text-white group-hover:text-indigo-300 transition-colors">Svårare frågor</h3>
                    <p class="text-xs text-slate-400">Fördjupning C-A nivå</p>
                </div>
                <div class="absolute right-4 opacity-0 group-hover:opacity-100 transition-all duration-300 transform translate-y-2 group-hover:translate-y-0">
