--- a/np/fysik.html
+++ b/np/fysik.html
@@ -102,21 +102,21 @@
 
        <!-- Grid Layout -->
        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-           <!-- 1. Materia & Värmelära (BYTT: Atommodell) -->
-           <a href="materia" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
-               <div class="image-box w-16 h-16 rounded-xl shrink-0 p-1">
-                   <img src="https://commons.wikimedia.org/wiki/Special:FilePath/Stylised_Lithium_Atom.svg" alt="Atommodell" class="w-full h-full object-contain transition-transform duration-500">
-               </div>
-               <div class="flex-1 min-w-0">
-                   <h3 class="text-lg font-bold text-white group-hover:text-blue-300 transition-colors">Materia & Värme</h3>
-                   <p class="text-xs text-slate-400 mt-1 leading-relaxed">Partikelmodellen, densitet, tryck och fasövergångar</p>
-               </div>
-               <div class="absolute right-4 top-1/2 -translate-y-1/2 opacity-0 group-hover:opacity-100 group-hover:translate-x-1 transition-all duration-300">
-                   <svg class="w-5 h-5 text-slate-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
-                   </svg>
-               </div>
-           </a>
+           <!-- 1. Materia & Värmelära (Uppdaterad med Pexels-bild) -->
+            <a href="materia" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
+                <div class="image-box w-16 h-16 rounded-xl shrink-0">
+                    <img src="https://images.pexels.com/photos/416528/pexels-photo-416528.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Vattenglas" class="w-full h-full object-cover transition-transform duration-500">
+                </div>
+                <div class="flex-1 min-w-0">
+                    <h3 class="text-lg font-bold text-white group-hover:text-blue-300 transition-colors">Materia & Värme</h3>
+                    <p class="text-xs text-slate-400 mt-1 leading-relaxed">Partikelmodellen, densitet, tryck och fasövergångar</p>
+                </div>
+                <div class="absolute right-4 top-1/2 -translate-y-1/2 opacity-0 group-hover:opacity-100 group-hover:translate-x-1 transition-all duration-300">
+                    <svg class="w-5 h-5 text-slate-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+                    </svg>
+                </div>
+            </a>
 
 
            <!-- 2. Krafter & Rörelse (BYTT: Newtons Vagga GIF) -->
