Sex and relations.

--- a/np/sjukdomquiz.html
+++ b/np/sjukdomquiz.html
@@ -473,6 +473,17 @@
                    ],
                    correct: 3,
                    explanation: "Ökat <strong>blodflöde</strong> transporterar fler vita blodkroppar till platsen för att bekämpa infektionen."
+               },
+               {
+                   q: "Vad händer i kroppen vid en allergisk reaktion?",
+                   options: [
+                       "Immunförsvaret är för svagt för att känna igen farliga ämnen",
+                       "Bakterier i magen börjar producera giftiga gaser efter måltiden",
+                       "Kroppen slutar producera röda blodkroppar under en kort period",
+                       "Immunförsvaret överreagerar på ämnen som egentligen är ofarliga"
+                   ],
+                   correct: 3,
+                   explanation: "Allergi innebär att <strong>försvaret attackerar</strong> t.ex. pollen eller matprotein som om de vore farliga inkräktare."
                }
            ]
        },
@@ -524,6 +535,17 @@
                    ],
                    correct: 3,
                    explanation: "<strong>Hemoglobin</strong> i de röda blodkropparna innehåller <strong>järnatomer</strong> som binder syret."
+               },
+               {
+                   q: "Hur kan enäggstvillingar få olika stora muskler trots att de har samma gener?",
+                   options: [
+                       "Det är omöjligt eftersom generna styr allt i kroppen helt och hållet",
+                       "Den ena tvillingen har ärvt fler dominanta anlag från pappan än den andra",
+                       "Miljöfaktorer som träning och kost påverkar hur musklerna utvecklas",
+                       "Det beror på att de har olika blodgrupper i AB0-systemet från födseln"
+                   ],
+                   correct: 2,
+                   explanation: "Egenskaper som muskelmassa bestäms av en kombination av både <strong>arv och miljö</strong>."
                }
            ]
        },
@@ -579,56 +601,45 @@
            ]
        },
        {
-           title: "Del 5: Psykisk hälsa & Beroende",
-           icon: "🧠",
-           text: "Hälsa handlar om både kropp och själ. <strong>Psykisk ohälsa</strong> kan yttra sig som depression eller ätstörningar. Vid ätstörningar är det viktigt med tidig hjälp. Beroendesjukdomar påverkar hjärnans <strong>belöningssystem</strong> där signalämnet <strong>dopamin</strong> spelar en central roll.",
-           questions: [
-               {
-                   q: "Vad bör man göra om man märker att en kompis verkar lida av en ätstörning?",
-                   options: [
-                       "Meddela en vuxen, t.ex. skolsköterska eller förälder, så fort som möjligt",
-                       "Vänta och se om det går över av sig självt för att inte göra kompisen arg",
-                       "Bjuda kompisen på extra mycket godis och läsk varje dag efter skolan",
-                       "Sluta prata med kompisen så att hen förstår att beteendet är felaktigt"
-                   ],
-                   correct: 0,
-                   explanation: "Vid psykisk sjukdom är det avgörande att behandling sätts igång <strong>tidigt</strong> av professionell personal."
-               },
-               {
-                   q: "Vilket signalämne i hjärnan har en central roll vid beroendesjukdomar?",
-                   options: [
-                       "Insulin",
-                       "Dopamin",
-                       "Hemoglobin",
-                       "Adrenalin"
-                   ],
-                   correct: 1,
-                   explanation: "<strong>Dopamin</strong> ingår i kroppens belöningssystem som kan 'kapas' vid ett beroende."
-               },
-               {
-                   q: "Hur kan enäggstvillingar få olika stora muskler trots att de har samma gener?",
-                   options: [
-                       "Det är omöjligt eftersom generna styr allt i kroppen helt och hållet",
-                       "Den ena tvillingen har ärvt fler dominanta anlag från pappan än den andra",
-                       "Miljöfaktorer som träning och kost påverkar hur musklerna utvecklas",
-                       "Det beror på att de har olika blodgrupper i AB0-systemet från födseln"
-                   ],
-                   correct: 2,
-                   explanation: "Egenskaper som muskelmassa bestäms av en kombination av både <strong>arv och miljö</strong>."
-               },
-               {
-                   q: "Vad händer i kroppen vid en allergisk reaktion?",
-                   options: [
-                       "Immunförsvaret är för svagt för att känna igen farliga ämnen",
-                       "Bakterier i magen börjar producera giftiga gaser efter måltiden",
-                       "Kroppen slutar producera röda blodkroppar under en kort period",
-                       "Immunförsvaret överreagerar på ämnen som egentligen är ofarliga"
-                   ],
-                   correct: 3,
-                   explanation: "Allergi innebär att <strong>försvaret attackerar</strong> t.ex. pollen eller matprotein som om de vore farliga inkräktare."
-               }
-           ]
-       }
+  "title": "Del 5: Psykisk hälsa & Beroende",
+  "icon": "🧠",
+  "text": "Hälsa handlar om både kropp och själ. <strong>Psykisk ohälsa</strong> kan yttra sig som depression eller ätstörningar. Vid ätstörningar är det viktigt med tidig hjälp. Beroendesjukdomar påverkar hjärnans <strong>belöningssystem</strong> där signalämnet <strong>dopamin</strong> spelar en central roll.",
+  "questions": [
+    {
+      "q": "Vilket signalämne i hjärnan har en central roll vid beroendesjukdomar?",
+      "options": [
+        "Insulin",
+        "Dopamin",
+        "Hemoglobin",
+        "Adrenalin"
+      ],
+      "correct": 1,
+      "explanation": "<strong>Dopamin</strong> ingår i kroppens belöningssystem som kan 'kapas' vid ett beroende."
+    },
+    {
+      "q": "Vad är sant gällande ätstörningar enligt informationen i texten?",
+      "options": [
+        "Det är viktigt att få hjälp i ett tidigt skede.",
+        "Det är en fysisk sjukdom som inte är psykisk.",
+        "Det går oftast över av sig självt utan stöd.",
+        "Det är en ovanlig form av beroendesjukdom."
+      ],
+      "correct": 0,
+      "explanation": "Vid ätstörningar poängteras vikten av <strong>tidig hjälp</strong> för tillfrisknandet."
+    },
+    {
+      "q": "Vilken del av hjärnan påverkas främst vid en beroendesjukdom?",
+      "options": [
+        "Hjärnans centrum för språkinlärning.",
+        "Den del som styr kroppens balanssinne.",
+        "Hjärnans centrala belöningssystem.",
+        "Området som hanterar vårt mörkerseende."
+      ],
+      "correct": 2,
+      "explanation": "Beroendesjukdomar påverkar hjärnans <strong>belöningssystem</strong> direkt."
+    }
+  ]
+}
    ];
 
 
