--- a/np/resonemang.html
+++ b/np/resonemang.html
@@ -128,7 +128,7 @@
 
 
            <!-- 2. QUIZ: Begreppskoll -->
-           <a href="resonemang" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
+           <a href="resonemangquiz" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
                <div class="icon-box w-14 h-14 bg-green-500/20 text-green-400 border border-green-500/30 shrink-0">
                   <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
