--- a/np/fysik.html
+++ b/np/fysik.html
@@ -215,7 +215,7 @@
       <div class="border-t border-white/10 pt-8 mt-12">
           <h2 class="text-2xl font-bold text-white mb-6 px-2 flex items-center gap-2">
               <svg class="w-6 h-6 text-violet-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"></path></svg>
-              Repetition & Bildbank
+              Repetition
           </h2>
           <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
              
