--- a/np/mix-e.html
+++ b/np/mix-e.html
@@ -217,7 +217,7 @@
                  <button onclick="location.reload()" class="w-full py-3 bg-violet-600 hover:bg-violet-500 text-white font-bold rounded-xl transition-all">
                      Kör igen
                  </button>
-                 <button onclick="window.location.href='index.html'" class="w-full py-3 bg-transparent border border-white/10 hover:bg-white/5 text-slate-300 font-bold rounded-xl transition-all">
+                 <button onclick="window.location.href='fysik'" class="w-full py-3 bg-transparent border border-white/10 hover:bg-white/5 text-slate-300 font-bold rounded-xl transition-all">
                      Tillbaka till startsidan
                  </button>
              </div>
@@ -280,7 +280,7 @@
 
 
        } catch (error) {
-           loadingText.innerText = "Kunde inte ladda frågor. Se till att du kör via en server (inte file://) och att questions.json ligger i mappen.";
+           loadingText.innerText = "Kunde inte ladda frågor.";
            loadingText.classList.remove('animate-pulse');
            loadingText.classList.add('text-red-400');
            console.error(error);
