--- a/np/no.html
+++ b/np/no.html
@@ -188,7 +188,7 @@
                        <p class="text-slate-400 mb-8 text-sm leading-relaxed">
                            Lär dig om periodiska systemet, kemiska bindningar, syror, baser och organisk kemi.
                        </p>
-                       <a href="#kemi" class="btn-glow block w-full bg-blue-600 hover:bg-blue-500 text-white text-center font-bold py-3.5 rounded-xl transition-all shadow-lg shadow-blue-900/20">
+                       <a href="kemi" class="btn-glow block w-full bg-blue-600 hover:bg-blue-500 text-white text-center font-bold py-3.5 rounded-xl transition-all shadow-lg shadow-blue-900/20">
                            Öppna Kemi
                        </a>
                    </div>
