--- a/np/bildvisare-fysik.html
+++ b/np/bildvisare-fysik.html
@@ -161,6 +161,7 @@
        document.addEventListener('keydown', (e) => {
            if (e.key === 'ArrowRight' || e.key === 'Space') changeImage(1);
            if (e.key === 'ArrowLeft') changeImage(-1);
+           if (e.key === 'Escape') window.location.href = 'fysik.html'; // Lägg till Escape om du vill kunna gå tillbaka
        });
 
 
