--- a/np/kemi.html
+++ b/np/kemi.html
@@ -109,7 +109,7 @@
 
 
            <!-- 1. Atomen och grundämnen -->
-           <a href="atomen.html" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
+           <a href="atomen" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
                <div class="image-box w-16 h-16 rounded-xl shrink-0">
                    <img src="https://commons.wikimedia.org/wiki/Special:FilePath/Stylised_atom_with_three_Bohr_model_orbits_and_stylised_nucleus.png?width=300" alt="Atommodell" class="w-full h-full object-contain transition-transform duration-500 p-1">
                </div>
@@ -121,7 +121,7 @@
 
 
            <!-- 2. Materia, blandningar och separation -->
-           <a href="blandningar.html" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
+           <a href="materia2" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
                <div class="image-box w-16 h-16 rounded-xl shrink-0">
                    <img src="https://images.unsplash.com/photo-1603126857599-f6e157fa2fe6?auto=format&fit=crop&w=300&q=80" alt="Laboratorieutrustning" class="w-full h-full object-cover transition-transform duration-500">
                </div>
@@ -228,7 +228,7 @@
            <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
               
                <!-- Knapp 1: Alla bilder -->
-               <a href="bildvisare-kemi.html" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden bg-blue-900/10 hover:bg-blue-900/20">
+               <a href="bildvisare-kemi" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden bg-blue-900/10 hover:bg-blue-900/20">
                    <div class="image-box w-14 h-14 rounded-xl shrink-0 bg-blue-500/10 border-blue-400/20">
                        <svg class="w-7 h-7 text-blue-300 transition-transform duration-500 group-hover:scale-110" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
