Reactions, organic chemistry and polishing.

--- a/np/kemi.html
+++ b/np/kemi.html
@@ -133,7 +133,7 @@
 
 
            <!-- 3. Reaktioner, bindningar och gaser (VALD: Abstrakt rök) -->
-           <a href="reaktioner.html" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
+           <a href="reaktioner" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
                <div class="image-box w-16 h-16 rounded-xl shrink-0">
                    <img src="https://images.unsplash.com/photo-1541701494587-cb58502866ab?auto=format&fit=crop&w=300&q=80" alt="Abstrakt rök" class="w-full h-full object-cover transition-transform duration-500">
                </div>
@@ -145,7 +145,7 @@
 
 
            <!-- 4. Organisk kemi och näringslära -->
-           <a href="organisk.html" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
+           <a href="kol" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
                <div class="image-box w-16 h-16 rounded-xl shrink-0">
                    <img src="https://commons.wikimedia.org/wiki/Special:FilePath/Methane-3D-balls.png?width=300" alt="Molekylmodell" class="w-full h-full object-contain transition-transform duration-500 p-1">
                </div>
