--- a/np/bildvisare-kemi.html
+++ b/np/bildvisare-kemi.html
@@ -76,7 +76,7 @@
 
    <!-- Diskret sidräknare -->
    <div class="absolute bottom-4 right-6 z-50 bg-black/50 px-3 py-1 rounded text-white/50 font-mono text-sm pointer-events-none backdrop-blur-sm">
-       <span id="counter">1 / 2</span>
+       <span id="counter">1 / 4</span>
    </div>
 
 
@@ -84,7 +84,9 @@
        // Bildlista för Kemi
        const images = [
            { file: 'atomen.png', title: 'Atomen & Periodiska systemet' },
-           { file: 'materia2.png', title: 'Fasövergångar, densitet och separationsmetoder' }
+           { file: 'materia2.png', title: 'Fasövergångar, densitet och separationsmetoder' },
+           { file: 'reaktioner.png', title: 'Reaktioner, bindningar och gaser' },
+           { file: 'kol.png', title: 'Organisk kemi' }
        ];
 
 
