Acids and environment.

--- a/np/bildvisare-kemi.html
+++ b/np/bildvisare-kemi.html
@@ -86,7 +86,9 @@
            { file: 'atomen.png', title: 'Atomen & Periodiska systemet' },
            { file: 'materia2.png', title: 'Fasövergångar, densitet och separationsmetoder' },
            { file: 'reaktioner.png', title: 'Reaktioner, bindningar och gaser' },
-           { file: 'kol.png', title: 'Organisk kemi' }
+           { file: 'kol.png', title: 'Organisk kemi' },
+           { file: 'syror.png', title: 'Syror, baser och elektrokemi' },
+           { file: 'kretslopp.png', title: 'Miljö & Kretslopp' }
        ];
 
 
