--- a/np/kemi.html
+++ b/np/kemi.html
@@ -157,7 +157,7 @@
 
 
            <!-- 5. Syror och baser (VALD: Blandad korg) -->
-           <a href="syror_baser.html" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
+           <a href="syror" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
                <div class="image-box w-16 h-16 rounded-xl shrink-0">
                    <img src="https://images.unsplash.com/photo-1610832958506-aa56368176cf?auto=format&fit=crop&w=300&q=80" alt="Blandad citruskorg" class="w-full h-full object-cover transition-transform duration-500">
                </div>
@@ -169,7 +169,7 @@
 
 
            <!-- 6. Miljö & Kretslopp (VALD: Skog/Natur) -->
-           <a href="miljo_kemi.html" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
+           <a href="kretslopp" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
                <div class="image-box w-16 h-16 rounded-xl shrink-0">
                    <img src="https://images.unsplash.com/photo-1469474968028-56623f02e42e?auto=format&fit=crop&w=300&q=80" alt="Skog och natur" class="w-full h-full object-cover transition-transform duration-500">
                </div>
