--- a/np/syror.html
+++ b/np/syror.html
@@ -182,7 +182,7 @@
 
 
            <!-- 5. PDF: Svårare frågor -->
-           <a href="Svårare frågor syror.pdf" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
+           <a href="syror.pdf" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
                <div class="icon-box w-14 h-14 bg-indigo-500/20 text-indigo-400 border border-indigo-500/30 shrink-0">
                    <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
