Resonemang och kallkritik started.

--- a/np/kemi.html
+++ b/np/kemi.html
@@ -181,7 +181,7 @@
 
 
            <!-- 7. Naturvetenskapliga resonemang (VALD: Tavla med formler) -->
-           <a href="resonemang_kemi.html" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
+           <a href="resonemang-kemi" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
                <div class="image-box w-16 h-16 rounded-xl shrink-0">
                    <img src="https://images.unsplash.com/photo-1473448912268-2022ce9509d8?auto=format&fit=crop&w=500&q=80" alt="Tavla med formler" class="w-full h-full object-cover transition-transform duration-500">
                </div>
@@ -193,7 +193,7 @@
 
 
            <!-- 8. Källkritisk granskning -->
-           <a href="kallkritik_kemi.html" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
+           <a href="kallkritik-kemi" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
                <div class="image-box w-16 h-16 rounded-xl shrink-0">
                    <img src="https://images.unsplash.com/photo-1504711434969-e33886168f5c?auto=format&fit=crop&w=300&q=80" alt="Nyheter" class="w-full h-full object-cover transition-transform duration-500">
                </div>
