--- a/np/kemi.html
+++ b/np/kemi.html
@@ -205,7 +205,7 @@
 
 
            <!-- 9. Systematiska undersökningar (Uppdaterad bild: Titrering) -->
-           <a href="undersokningar_kemi.html" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden bg-blue-900/20 border-blue-500/30">
+           <a href="undersokningar-kemi" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden bg-blue-900/20 border-blue-500/30">
                <div class="image-box w-16 h-16 rounded-xl shrink-0 border-blue-500/50">
                    <img src="https://images.unsplash.com/photo-1532187863486-abf9dbad1b69?auto=format&fit=crop&w=300&q=80" alt="Titrering och laboration" class="w-full h-full object-cover transition-transform duration-500">
                </div>
