--- a/np/bildvisare-kemi.html
+++ b/np/bildvisare-kemi.html
@@ -76,7 +76,7 @@
 
    <!-- Diskret sidräknare -->
    <div class="absolute bottom-4 right-6 z-50 bg-black/50 px-3 py-1 rounded text-white/50 font-mono text-sm pointer-events-none backdrop-blur-sm">
-       <span id="counter">1 / 6</span>
+       <span id="counter">1 / 9</span>
    </div>
 
 
@@ -88,7 +88,10 @@
            { file: 'reaktioner.png', title: 'Reaktioner, bindningar och gaser' },
            { file: 'kol.png', title: 'Organisk kemi' },
            { file: 'syror.png', title: 'Syror, baser och elektrokemi' },
-           { file: 'kretslopp.png', title: 'Miljö & Kretslopp' }
+           { file: 'kretslopp.png', title: 'Miljö & Kretslopp' },
+           { file: 'resonemang-kemi.png', title: 'Naturvetenskapliga resonemang' },
+           { file: 'kallkritik-kemi.png', title: 'Källkritik' },
+           { file: 'undersokningar-kemi.png', title: 'Systematiska undersökningar' }
        ];
 
 
