Lars Kjellander videos and other stuff.

--- a/np/resonemang-kemi.html
+++ b/np/resonemang-kemi.html
@@ -125,6 +125,42 @@
                    <svg class="w-5 h-5 text-slate-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path></svg>
                </div>
            </a>
+           
+           <a href="https://youtu.be/rtFxWeboKSQ?si=cbnevJsqXvwGUk-D" target="_blank" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
+               <div class="icon-box w-14 h-14 bg-red-500/20 text-red-400 border border-red-500/30 shrink-0">
+                   <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" viewBox="0 0 24 24" fill="currentColor">
+                       <path d="M8 5v14l11-7z"/>
+                   </svg>
+               </div>
+               <div class="flex-1 min-w-0">
+                   <div class="flex items-center gap-2 mb-1">
+                       <span class="tag bg-red-500/20 text-red-300 border border-red-500/30">Film</span>
+                   </div>
+                   <h3 class="text-lg font-bold text-white group-hover:text-red-300 transition-colors">Gamla NP 1</h3>
+                   <p class="text-xs text-slate-400">Genomgång</p>
+               </div>
+               <div class="absolute right-4 opacity-0 group-hover:opacity-100 transition-all duration-300 transform translate-x-2 group-hover:translate-x-0">
+                   <svg class="w-5 h-5 text-slate-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path></svg>
+               </div>
+           </a>
+           
+           <a href="https://youtu.be/SwWgG1G5VLE?si=aF8OT7s7tQXWZQkK" target="_blank" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
+               <div class="icon-box w-14 h-14 bg-red-500/20 text-red-400 border border-red-500/30 shrink-0">
+                   <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" viewBox="0 0 24 24" fill="currentColor">
+                       <path d="M8 5v14l11-7z"/>
+                   </svg>
+               </div>
+               <div class="flex-1 min-w-0">
+                   <div class="flex items-center gap-2 mb-1">
+                       <span class="tag bg-red-500/20 text-red-300 border border-red-500/30">Film</span>
+                   </div>
+                   <h3 class="text-lg font-bold text-white group-hover:text-red-300 transition-colors">Gamla NP 2</h3>
+                   <p class="text-xs text-slate-400">Genomgång</p>
+               </div>
+               <div class="absolute right-4 opacity-0 group-hover:opacity-100 transition-all duration-300 transform translate-x-2 group-hover:translate-x-0">
+                   <svg class="w-5 h-5 text-slate-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path></svg>
+               </div>
+           </a>
 
 
            <!-- 2. QUIZ: Begreppskoll -->
