--- a/np/kol.html
+++ b/np/kol.html
@@ -145,6 +145,42 @@
                    <svg class="w-5 h-5 text-slate-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path></svg>
                </div>
            </a>
+           
+           <a href="https://youtu.be/lMEWEJsztiA?si=hjPLfIyB7UNRrQOV" target="_blank" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
+               <div class="icon-box w-14 h-14 bg-red-500/20 text-red-400 border border-red-500/30 shrink-0">
+                   <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" viewBox="0 0 24 24" fill="currentColor">
+                       <path d="M8 5v14l11-7z"/>
+                   </svg>
+               </div>
+               <div class="flex-1 min-w-0">
+                   <div class="flex items-center gap-2 mb-1">
+                       <span class="tag bg-red-500/20 text-red-300 border border-red-500/30">Film</span>
+                   </div>
+                   <h3 class="text-lg font-bold text-white group-hover:text-red-300 transition-colors">Matspjälkningen</h3>
+                   <p class="text-xs text-slate-400">Genomgång</p>
+               </div>
+               <div class="absolute right-4 opacity-0 group-hover:opacity-100 transition-all duration-300 transform translate-x-2 group-hover:translate-x-0">
+                   <svg class="w-5 h-5 text-slate-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path></svg>
+               </div>
+           </a>
+           
+           <a href="https://youtu.be/EzEoAVn8o_k?si=9ZbdTtorLYnTZbec" target="_blank" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
+               <div class="icon-box w-14 h-14 bg-red-500/20 text-red-400 border border-red-500/30 shrink-0">
+                   <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" viewBox="0 0 24 24" fill="currentColor">
+                       <path d="M8 5v14l11-7z"/>
+                   </svg>
+               </div>
+               <div class="flex-1 min-w-0">
+                   <div class="flex items-center gap-2 mb-1">
+                       <span class="tag bg-red-500/20 text-red-300 border border-red-500/30">Film</span>
+                   </div>
+                   <h3 class="text-lg font-bold text-white group-hover:text-red-300 transition-colors">Gamla NP</h3>
+                   <p class="text-xs text-slate-400">Genomgång</p>
+               </div>
+               <div class="absolute right-4 opacity-0 group-hover:opacity-100 transition-all duration-300 transform translate-x-2 group-hover:translate-x-0">
+                   <svg class="w-5 h-5 text-slate-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path></svg>
+               </div>
+           </a>
 
 
            <!-- 3. QUIZ: Begreppskoll -->
@@ -181,7 +217,7 @@
            </a>
 
 
-           <!-- 5. GRAFIK: Matens kemi 
+           <!-- 5. GRAFIK: Matens kemi -->
            <a href="mat.png" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
                <div class="icon-box w-14 h-14 bg-indigo-500/20 text-indigo-400 border border-indigo-500/30 shrink-0">
                    <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -195,7 +231,7 @@
                    <h3 class="text-lg font-bold text-white group-hover:text-indigo-300 transition-colors">Matens kemi</h3>
                    <p class="text-xs text-slate-400">Informationsgrafik</p>
                </div>
-           </a>   -->
+           </a>
 
 
            <!-- 6. PDF: Svårare frågor -->
